src/pages/player/index.css
.MuiTreeItem-iconContainer {
    width: auto !important;
    justify-content: normal !important;
    margin-right: 0px !important;
}

.inventory {
    display: flow-root;
}

.grid-container {
    display: grid;
    float: left;
    gap: 10px;
}

.grid-container.main {
    grid-template-columns: auto auto auto;
    margin-right: 10px;
    margin-bottom: 10px;
}

.grid-container.side {
    grid-template-columns: auto;
}

.grid-container>div {
    text-align: center;
    font-size: 20px;
    border: 4px solid var(--color-black-light);
}

.slot {
    height: max-content;
}

.slot-label {
    text-align: left;
    font-size: 14px;
    padding: 3px;
    background-color: rgb( from var(--color-black) r g b / 0.4);
    font-weight: bolder;    
}

.weapon {
    grid-column: 1 / span 2;
}

ul.favorite-item-list {
    list-style: none;
    padding: 0px;
}

ul.favorite-item-list li {
    display: inline-block;
    padding-left: 2px;
}

.rare {
    color: var(--color-purple);
}

.legendary {
    color: var(--color-yellow);
}

.banned, .not-banned {
    margin-left: 1em;
}

.banned {
    color: var(--color-red);
}

.not-banned {
    color: var(--color-green);
}

.turnstile-widget {
    margin: 0px;
}

.profile-button {
    padding: .2rem;
    border-radius: 4px;
    vertical-align: middle;
    margin-left: 20px;
}

.current-wipe-achievement {
    font-weight: bold;
}

@media screen and (min-width: 1920px) {
    .inventory {
      margin-left: 12.5rem;
    }
  }

